# fyp-chatbot

./: .env  .gitignore  AN_KnowledgeBase.py  AdminHome.py  Home.py  Narelle.py  README.md  nontrivial_questions.txt  requirements.txt  sample_file.txt  test_cases.py  tests.py  update_kb.ipynb
app/admin-homepage/: AdminHome.py
app/admin-homepage/.streamlit/: config.toml
app/chatbot-homepage/: Home.py
app/chatbot-homepage/.streamlit/: config.toml
assets/test_documents/azure_ai_search_workshop/: Course Information.docx
chatbot/: Narelle.py
db/: asknarelle_qna.txt
frontend/admin-homepage/: AdminHome.py
frontend/admin-homepage/.streamlit/: config.toml
frontend/chatbot-homepage/: Home.py
kb/: AN_KnowledgeBase.py  AN_RL_KnowledgeBase.py  AN_RL_KnowledgeBase_old.py  utils.py
notebooks/: kb_manager.ipynb  styling_tests.ipynb  update_kb.ipynb
src/chatbot/: AN_Knowledge_Base.py  Narelle.py
src/kb/: AN_KnowledgeBase.py  utils.py
src/knowledge_base_manager/: pyproject.toml
src/knowledge_base_manager/core/: knowledge_base_manager.py  qna_manager.py
src/knowledge_base_manager/knowledge_base_manager/core/: knowledge_base_manager.py  qna_manager.py
src/knowledge_base_manager/knowledge_base_manager/utils/: document_loaders.py
src/knowledge_base_manager/utils/: document_loaders.py
src/utils/: logger.py
test_document/: ~$urse Information.docx
test_documents/azure_ai_search_workshop/: FAQs about the Course.docx
tests/: db_connection_test.py  mongodb_test.py  test.py  test_cases.py  test_env_variables.py
(+2 files in other folders)
